# nazibar-com

./: .gitignore  .mise.toml  .terraform.lock.hcl  CLAUDE.md  README.md  justfile  main.tf  package-lock.json  package.json  pelicanconf.py  publishconf.pr.py  publishconf.py  pyproject.toml  tasks.py  vendors.json  versions.tf
.github/: pr_publishconf.py
.github/workflows/: main.yml  pr.yml
content/pages/: index.md
plugins/jinja2content/: jinja2content.py
plugins/vendors_json/: __init__.py  jinja2content.py  vendors_json.py
pr-1/: archives.html  authors.html  categories.html  index.html  tags.html
pr-1/feeds/: all.atom.xml
pr-1/theme/css/: style.css
pr-2/: archives.html  authors.html  categories.html  index.html  tags.html
pr-2/feeds/: all.atom.xml
pr-2/theme/css/themes/: cyber.css
pr-4/: archives.html  authors.html  categories.html  index.html  tags.html
pr-4/feeds/: all.atom.xml
pr-4/images/social/: og-image-alt.txt  og-image.pxd
pr-4/theme/css/themes/: cyber.css  red.css
themes/brutalist/templates/: base.html
themes/nazibar/static/css/: style.css
themes/nazibar/static/css/themes/: brutalist.css  red.css
themes/nazibar/templates/: base.html  index.html  page.html
themes/red/templates/: base.html
