[project]
name = "nazibar-com"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Chris Rose", email = "offline@offby1.net"},
]
dependencies = [
    "pelican>=4.9.1",
    "boto3>=1.34.117",
]
requires-python = ">=3.12.3"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
